# embedded-multi-page-hmi

./: Cargo.toml  DESIGN-NOTES.md  README.md
.github/workflows/: publish-on-master.yml  publish.yml
examples/: one-button-rolling-pages.rs  sim-on-unix-term.rs  sim-submenu-navigation.rs  simulate-async-await.rs  simulate-on-host.rs
src/: lib.rs  lifetime.rs  page.rs  page_manager.rs  setting.rs  tests.rs
src/lifetime/: tests.rs
src/page/: basic.rs  enter_string.rs  menu.rs
src/page/basic/: tests.rs
src/page/enter_string/: tests.rs
src/page/menu/: tests.rs
src/page_manager/: tests.rs
