[package]
name = "embedded-multi-page-hmi"
version = "0.3.0"

description = "Multi page HMI targetting embedded devices with a few of buttons input and a constrainted display"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
keywords = ["embedded", "hmi"]

documentation = "https://docs.rs/embedded-multi-page-hmi"
homepage = "https://github.com/almedso/embedded-multi-page-hmi"
repository = "https://github.com/almedso/embedded-multi-page-hmi"
readme = "README.md"
edition = "2018"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.md",
]

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
# alloc-no-stdlib = "2.0.3"
# heapless = "0.7.5"


[dev-dependencies]
chrono = "0.4.19"
pancurses = "0.16.1"
# for async/await example
crossterm = { version = "0.21.*", features = ["event-stream"] }
tokio = { version = "1.5", features = ["full"] }
futures = "0.3"
futures-timer = "3.0"
async-std = "1.9"
serde_json = "1.0.45"
